<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="actiontitle">Action</string>
    <string name="answer_phone_summary">When you receive an incoming call, put your phone near your ear to answer automatically</string>
    <string name="app_name">Smart Gesture</string>
    <string name="callother">Call someone</string>
    <string name="default_gesture_group_name">Standby/active screen - Default gesture</string>
    <string name="direct_call_summary">Put your phone close to your ear to call directly a contact from the contact card</string>
    <string name="disable_edit_gestures">this action is not editable.</string>
    <string name="doubleclick_lockscreen_summary">Double click on the Home button (on navigation bar) to lock your screen</string>
    <string name="doubleclick_turnonscreen_summary">Double click on the screen (standby mode) to wake up your screen</string>
    <string name="drawgesture">Draw a gesture</string>
    <string name="drawgesture_bottom">The bottom of the device</string>
    <string name="drawgesture_info">"Slide up from the bottom of the device 
 to editing gestures"</string>
    <string name="gestureCancel">Cancel</string>
    <string name="gestureDelete">Delete</string>
    <string name="gestureDeleteMessage">You are about to delete this gesture</string>
    <string name="gestureDeleteMessageadd">Do you want delete this gesture?</string>
    <string name="gestureEdit">Edit</string>
    <string name="gestureEditGesture">Change gestures</string>
    <string name="gestureEditJob">Modify action</string>
    <string name="gestureMessage2">Please try again</string>
    <string name="gestureMessage3">This gesture is too simple,please redraw a new one</string>
    <string name="gestureMessage4">This gesture is disable, you could activate it.</string>
    <string name="gestureMessageEnd">”please try again</string>
    <string name="gestureMessageStart">This gesture is the same than“</string>
    <string name="gestureOK">OK</string>
    <string name="gestureRedo">Draw more</string>
    <string name="gesture_edit_failed">Edit gesture failed</string>
    <string name="gesture_main_show_bar_subtitle">Slide down on the desktop</string>
    <string name="gesture_main_show_bar_title">Show notification</string>
    <string name="gesture_main_show_task_subtitle">Slide up on the desktop</string>
    <string name="gesture_main_show_task_title">Show task</string>
    <string name="gesture_secure_toast">Please unlock your screen first !</string>
    <string name="gesture_setttings_preferenceCategory_offScreen_title">Interactions</string>
    <string name="gesture_setttings_preferenceCategory_onScreen_title">Actions On Screen</string>
    <string name="gesture_setttings_promixy_answer_phone">Get the call</string>
    <string name="gesture_setttings_promixy_direct_call">Direct call</string>
    <string name="gesture_setttings_promixy_doubleclick_lockscreen">Lock screen by double tap</string>
    <string name="gesture_setttings_promixy_doubleclick_turnonscreen">Wake up screen by double tap</string>
    <string name="gesture_setttings_promixy_handsfree_switch">Disable the handsfree</string>
    <string name="gesture_setttings_promixy_powerkey_unlock">Unlock by power button</string>
    <string name="gesture_setttings_promixy_smart_black">Answer by mistake</string>
    <string name="gesture_setttings_promixy_upset_snooze">Flip to snooze</string>
    <string name="gesture_setttings_upset_silent">Flip to mute</string>
    <string name="gesturelistadd">Add new gesture</string>
    <string name="gesturelistopenbookmark">open bookmark:</string>
    <string name="gesturelistsendsms">Send sms to：</string>
    <string name="gesturelisttitle">Custom gesture list</string>
    <string name="gesturetitle">Detail</string>
    <string name="getsure_about_menu">About</string>
    <string name="getsure_help_info">Pull down the upper left corner of your screen to open the draw area</string>
    <string name="getsure_help_menu">Help</string>
    <string name="getsure_help_not_rem">Do not remind</string>
    <string name="getsure_option_add">Create</string>
    <string name="getsure_option_info">Redraw or use it to create a new gesture</string>
    <string name="getsure_option_info2">The App or the contact associated no exist</string>
    <string name="getsure_option_redraw">Redraw</string>
    <string name="getsure_settings_menu">Settings</string>
    <string name="getsure_switch_info">Pull down the upper left corner of your screen</string>
    <string name="group_user_gesture_empty">0 gestures created,Create your own gesture</string>
    <string name="handsfree_switch_summary">Put your phone close to your ear to deactivate the handsfree mode</string>
    <string name="launchApp">Launch App</string>
    <string name="loading">Loading...</string>
    <string name="menu_done">Done</string>
    <string name="menu_search">Search</string>
    <string name="no_app">No Apps found</string>
    <string name="no_bookmarks">No bookmarks found</string>
    <string name="no_getsure">No Gestures found</string>
    <string name="no_recipients">No contacts</string>
    <string name="no_support_option">This function is not available on battery saver mode</string>
    <string name="no_user_gestures">"0 gestures created 
 Create your own gestures"</string>
    <string name="openBookmark">Open home screen bookmark</string>
    <string name="open_bookmark">Open home screen bookmark</string>
    <string name="optiontitle">Create a gesture</string>
    <string name="powerkey_unlock_summary">In standby mode, short press the power key button to unlock your screen</string>
    <string name="searchHint">Search Apps</string>
    <string name="search_contact_hint">Search Contacts</string>
    <string name="selectBookmarkTitle">Select Bookmark</string>
    <string name="select_contact">Choose a contact</string>
    <string name="selectapptitle">Select app</string>
    <string name="service_foreground">Authorization</string>
    <string name="service_foreground_summary">Do not allow the system to stop Smart Gesture</string>
    <string name="settings_happen_category">Quick access</string>
    <string name="settings_service">Settings</string>
    <string name="settings_version_title">Version</string>
    <string name="smart_black_summary">"Don't turn on screen when your phone is on your pocket and you received a call in order to don't answer by mistake"</string>
    <string name="smartaction">Smart Action</string>
    <string name="smstoother">Send SMS to someone</string>
    <string name="swipe_from_top_left">Pull down the upper left corner of your screen</string>
    <string name="swipe_from_top_left_title">Pull</string>
    <string name="switch_off_text">Off</string>
    <string name="switch_on_text">On</string>
    <string name="switch_total_off">Off</string>
    <string name="switch_total_on">On</string>
    <string name="upset_silent_summary">When you receive an incoming call, flip your phone to mute the ringtone</string>
    <string name="upset_snooze_summary">When the alarm is ringing, flip your phone to launch the snooze mode</string>
    <string name="use_atouch">Floating button</string>
    <string name="use_atouch_summary">Display a shortcut on your screen and that will be always displayed</string>
    <string name="user_gesture_empty">"0 gesture created 
 Create your own gesture"</string>
    <string name="user_gesture_group_name">Active screen - My gesture</string>
    <string name="welcome_gesture_checkbox_title">Do not show me again</string>
    <string name="welcome_gesture_close_btn">Close</string>
    <string name="welcome_gesture_content_first">With Smart Gestures, create your quick actions to launch Apps, call or send a SMS to someone. Make a test by drawing a O to launch your camera or start creating your own gesture. Get access to the drawing area anywhere on your phone</string>
    <string name="welcome_gesture_content_second">Make a test by drawing a \"O\" to launch your camera or start creating your own shortcut.</string>
    <string name="welcome_gesture_create_btn">Create</string>
    <string name="welcome_gesture_dialog_title">Welcome to Smart Gestures</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us error data, all you have to do is click OK.</string>
    <string name="crash_dialog_title">Gesture has crashed</string>
    <string name="gestureCreated">This gesture is already used by another action</string>
    <string name="gesture_edit_succeed">Gesture created</string>
    <string name="gesture_main_action_answer_subtitle">Put phone near ear</string>
    <string name="gesture_main_action_call_subtitle">Put phone near ear</string>
    <string name="gesture_main_gesture_sleep">Fast sleep</string>
    <string name="gesture_main_gesture_sleep_subtitle">Double click on the desktop</string>
    <string name="gesture_main_gesture_subtitle1">"Start "</string>
    <string name="gesture_main_gesture_subtitle2">" gestures"</string>
    <string name="gesture_main_gesture_title">Custom gestures</string>
    <string name="gesture_main_gesture_workspace_slide">Slide Jump</string>
    <string name="gesture_main_gesture_workspace_slide_subtitle">Slide two fingers on the desktop</string>
    <string name="gesture_main_title">Gesture action</string>
    <string name="gesture_tutorial_promixy_answer_phone">Put your phone close to your ear to call directly a contact from the contact card</string>
    <string name="gesturelistcallto">Make call with：</string>
    <string name="getsure_draw">Drawing Gesture</string>
    <string name="settings_author_title">Author</string>
    <string name="settings_self_title">way</string>
    <string name="startapp">Start:</string>
    <string name="default_gesture_group_name_no_tp">Active screen - Default gesture</string>
    <string name="user_gesture_group_name_no_tp">Active screen - My gesture</string>
    <string name="letter_tile_letter_font_family">sans-serif-light</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
</resources>