<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/welcome_dialog_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="24.0dip" android:paddingEnd="24.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/TextWelcomeContentStyle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_gesture_content_first" />
            <TextView android:textAppearance="@style/TextWelcomeContentStyle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_gesture_content_second" />
            <CheckBox android:textColor="@color/welcome_content_text_color" android:id="@id/welcome_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@drawable/welcome_checkbox_style" android:text="@string/welcome_gesture_checkbox_title" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>